Cahnged dark mode color hue and fixed submit button shadow

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 	/*Dark*/
 	--dark-background: rgb(14, 18, 23);
 	--dark-text: #fafafa;
-	--dark-orange: hsl(36, 75%, 50%);
-	--dark-blue: hsl(201, 70%, 36%);
+	--dark-orange: hsl(36, 80%, 50%);
+	--dark-blue: hsl(201, 80%, 36%);
 	--dark-work-back: rgb(28, 32, 38);
 	--dark-work-border: rgb(56, 61, 71);
 }
@@ -503,6 +503,8 @@ button {
 	width: 50%;
 	justify-self: center;
 	border-radius: 0.75rem 0.25rem;
+	border: none;
+	box-shadow: 0px 2px 4px hsla(36, 100%, 49%, 0.623);
 }
 
 /*======== Footer =======*/
